2003-03-26  Braden McDaniel  <braden@endoframe.com>

        * configure.ac:  Use AC_HELP_STRING for help strings.

2003-03-23  Braden McDaniel  <braden@endoframe.com>

        * src/openvrml/OpenVRML/vrml97node.cpp,
          src/openvrml/OpenVRML/vrml97node.h:  Use basetypes in Text
          node implementation.

2003-03-22  Braden McDaniel  <braden@endoframe.com>

        * src/openvrml/OpenVRML/node.cpp:  Work around an apparent
          gcc 3.2.2 bug with pointer-to-member syntax.

        * src/openvrml/OpenVRML/Viewer.cpp,
          src/openvrml/OpenVRML/Viewer.h,
          src/openvrml/OpenVRML/browser.cpp,
          src/openvrml/OpenVRML/vrml97node.cpp,
          src/openvrml-gl/OpenVRML/GL/ViewerOpenGL.cpp,
          src/openvrml-gl/OpenVRML/GL/ViewerOpenGL.h:  Use basetypes in
          Viewer interface.

2003-03-21  Braden McDaniel  <braden@endoframe.com>

        * src/openvrml/OpenVRML/System.cpp,
          src/openvrml/OpenVRML/System.h:  Fixes to compile with cl
          (POSIXy functions start with an underscore).

        * src/openvrml/OpenVRML/basetypes.cpp: mat4f::operator*= needs
          to return.

        * src/openvrml/OpenVRML/node.h:  NodeTraverser::operator= must
          return a reference.

        * src/openvrml/OpenVRML/node.cpp:  cl 13.00.9466 doesn't like
          a class in a member function definition referring to private
          members of the outer class.  So use a pointer-to-member
          instead.

        * src/openvrml/OpenVRML/browser.cpp:  Fixes for cl 13.00.9466.

        * src/openvrml/OpenVRML/bvolume.cpp:  #include <limits> instead
          of <float.h>.

2003-03-12  Braden McDaniel  <braden@endoframe.com>

        * src/lookat/lookat.cpp, src/openvrml/OpenVRML/ScriptJDK.cpp,
          src/openvrml/OpenVRML/Viewer.h,
          src/openvrml/OpenVRML/Vrml97Parser.cpp,
          src/openvrml/OpenVRML/Vrml97Parser.g,
          src/openvrml/OpenVRML/Vrml97Parser.hpp,