@@ -10,59 +10,59 @@ dnl set to "yes".
 dnl
 dnl @copyright (C) 2003 Braden McDaniel
 dnl @license GNU GPL
-dnl @version $Id: ax_check_glut.m4,v 1.2 2003-02-15 08:19:22 braden Exp $
+dnl @version $Id: ax_check_glut.m4,v 1.3 2003-03-27 04:17:29 braden Exp $
 dnl @author Braden McDaniel <braden@endoframe.com>
 dnl
 AC_DEFUN([AX_CHECK_GLUT],
 [AC_REQUIRE([AX_CHECK_GL])dnl
 AC_REQUIRE([AC_PATH_XTRA])dnl
-GLUT_LIBS="${GL_LIBS}"
 
-#
-# If X is present, assume GLUT depends on it.
-#
-if test "X${no_x}" != "Xyes"; then
-  GLUT_CFLAGS="${GL_CFLAGS}"
-  GLUT_LIBS="${X_PRE_LIBS} -lXmu -lXi ${X_EXTRA_LIBS} ${GLUT_LIBS}"
-fi
+GLUT_CFLAGS=${GL_CFLAGS}
 
-AC_LANG_PUSH(C)
-  
-ax_save_CPPFLAGS="${CPPFLAGS}"
-CPPFLAGS="${GLUT_CFLAGS} ${CPPFLAGS}"
+if test "X$with_apple_opengl_framework" = "Xyes"; then
+  GLUT_CFLAGS="${GLUT_CFLAGS} -framework GLUT"
+else
+  GLUT_LIBS="${GL_LIBS}"
 
-AC_CHECK_HEADERS([GL/glut.h GLUT/glut.h], [break])
+  #
+  # If X is present, assume GLUT depends on it.
+  #
+  if test "X${no_x}" != "Xyes"; then
+    GLUT_LIBS="${X_PRE_LIBS} -lXmu -lXi ${X_EXTRA_LIBS} ${GLUT_LIBS}"
+  fi
 
-AC_CACHE_CHECK([for GLUT library], [ax_cv_check_glut_libglut],
-[ax_cv_check_glut_libglut="no"
-ax_save_LIBS="${LIBS}"
-LIBS=""
-ax_check_libs="-lglut32 -lglut"
-for ax_lib in ${ax_check_libs}; do
-  LIBS="${ax_lib} ${GLUT_LIBS} ${ax_save_LIBS}"
-  AC_TRY_LINK([
+  AC_LANG_PUSH(C)
+
+  ax_save_CPPFLAGS="${CPPFLAGS}"
+  CPPFLAGS="${GLUT_CFLAGS} ${CPPFLAGS}"
+
+  AC_CACHE_CHECK([for GLUT library], [ax_cv_check_glut_libglut],
+  [ax_cv_check_glut_libglut="no"
+  ax_save_LIBS="${LIBS}"
+  LIBS=""
+  ax_check_libs="-lglut32 -lglut"
+  for ax_lib in ${ax_check_libs}; do
+    LIBS="${ax_lib} ${GLUT_LIBS} ${ax_save_LIBS}"
+    AC_TRY_LINK([
 # ifdef _WIN32
 #   include <windows.h>
 # endif
-# ifdef HAVE_OPENGL_GLUT_H
-#   include <OpenGL/glut.h>
-# else
-#   include <GL/glut.h>
-# endif
-],
-  [glutMainLoop()],
-  [ax_cv_check_glut_libglut="${ax_lib}" break])
-  
-done
-LIBS=${ax_save_LIBS}
-])
-CPPFLAGS="${ax_save_CPPFLAGS}"
-AC_LANG_POP(C)
+# include <GL/glut.h>
+  ],
+    [glutMainLoop()],
+    [ax_cv_check_glut_libglut="${ax_lib}"; break])
 
-if test "X${ax_cv_check_glut_libglut}" = "Xno"; then
-  no_glut="yes"
-else
-  GLUT_LIBS="${ax_cv_check_glut_libglut} ${GLUT_LIBS}"
+  done
+  LIBS=${ax_save_LIBS}
+  ])
+  CPPFLAGS="${ax_save_CPPFLAGS}"
+  AC_LANG_POP(C)
+
+  if test "X${ax_cv_check_glut_libglut}" = "Xno"; then
+    no_glut="yes"
+  else
+    GLUT_LIBS="${ax_cv_check_glut_libglut} ${GLUT_LIBS}"
+  fi
 fi
 
 AC_SUBST([GLUT_CFLAGS])
