@@ -33,7 +33,7 @@
 # endif
 
 # include <iostream>
-# ifdef HAVE_OPENGL_GLUT_H
+# if HAVE_APPLE_OPENGL_FRAMEWORK
 #   include <OpenGL/glut.h>
 # else
 #   include <GL/glut.h>
